# quant_cpp

./: .gitignore  CMakeLists.txt  MarketDataAnalyzer.cpp  MarketDataAnalyzer.h  NewsSentimentAnalyzer.cpp  NewsSentimentAnalyzer.h  OptionsPricing.cpp  OptionsPricing.h  README.md  RiskManagement.cpp  RiskManagement.h  TechnicalIndicators.cpp  TechnicalIndicators.h  TradeLogger.cpp  TradeLogger.h  backtesting_framework.cpp  main.cpp  market_data.cpp  montecarlo.cpp  moving_average_calculator.cpp  news_sentiment.cpp  options_pricing.cpp  protfolio_tracker.cpp  risk_manger.cpp  simple_trading_bot.cpp  stock_price_fetcher.cpp  technical_indicators.cpp  trade_logger.cpp
tests/: CMakeLists.txt  test_TechnicalIndicators.cpp
